--- a/conf/solver/language_only.yaml
+++ b/conf/solver/language_only.yaml
@@ -1,5 +1,5 @@
-_target_: solvers.llama_solver.LLamaSolver
+_target_: solvers.caption_aggregation_solver.CaptionAggregationSolver
 name: language_only_baseline
-huggingface_model_id: meta-llama/Meta-Llama-3-8B-Instruct # ensure you have LLama3's access
+huggingface_model_id: meta-llama/Meta-Llama-3.1-8B-Instruct # ensure you have LLama3's access
 image_root: "${basic.image_root}"
 debug_mode: "${basic.debug_mode}"
