--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
-tqdm==4.66.2
-nltk==3.8.1
-hydra-core==1.3.2
-transformers==4.41.0
-tiktoken==0.7.0
-transformers_stream_generator==0.0.5
+# Important libraries with versions
+lmdeploy~=0.6
+torch
+torchvision
+transformers~=4.45
+accelerate
+# flash-attn~=2.6
+outlines==0.0.46 # Specifiy cuz this error: https://github.com/dottxt-ai/outlines/issues/1198
 
-# specifics
-openai==1.35.5
-google-generativeai==0.7.1
-anthropic==0.30.0
+tqdm
+nltk
+pandas
+hydra-core
+scipy               # used by the OWL-v2 detector
+qwen-vl-utils       # used by the qwen2-vl model
+icecream            # used by the mPLUG OWL model
+google-generativeai # used by gemini 
+anthropic           # used by claude
+openai              # used by gpt
